--- a/conda/environments/builddocs.yml
+++ b/conda/environments/builddocs.yml
@@ -17,9 +17,10 @@ dependencies:
 - pip:
   - --extra-index-url=https://pypi.anaconda.org/rapidsai-wheels-nightly/simple
   # NOTE: this correctly changes dependencies like 'libucx' to their suffixed,
-  #       existing versions like 'libucx-cu12' via an environment variable set
+  #       existing versions like 'libucx-cu12' via an environment variables set
   #       in the readthedocs UI:
-  # 
+  #
+  #         - RAPIDS_DISABLE_CUDA=true
   #         - RAPIDS_MATRIX_ENTRY="cuda=12.2"
   #
   - ../../
