--- a/conda/recipes/ucx-py/meta.yaml
+++ b/conda/recipes/ucx-py/meta.yaml
@@ -29,6 +29,7 @@ requirements:
   host:
     - python
     - pip
+    - rapids-build-backend >=0.3.0,<0.4.0dev0
     - ucx
     # 'libucx' wheel dependency is unnecessary... the 'ucx' conda-forge package is used here instead
     {% for r in data.get("build-system", {}).get("requires", []) if not r.startswith("libucx") %}
