--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -133,13 +133,13 @@ dependencies:
         matrices:
           - matrix: {cuda: "12.*"}
             packages:
-              - libucx-cu12==1.15.0,>=0.0.0a0
+              - libucx-cu12==1.15.0
           - matrix: {cuda: "11.*"}
             packages:
-              - libucx-cu11==1.15.0,>=0.0.0a0
+              - libucx-cu11==1.15.0
           - matrix: null
             packages:
-              - libucx==1.15.0,>=0.0.0a0
+              - libucx==1.15.0
   depends_on_ucx_run:
     common:
       - output_types: conda
@@ -155,13 +155,13 @@ dependencies:
         matrices:
           - matrix: {cuda: "12.*"}
             packages:
-              - libucx-cu12>=1.15.0,<1.16,>=0.0.0a0
+              - libucx-cu12>=1.15.0,<1.16
           - matrix: {cuda: "11.*"}
             packages:
-              - libucx-cu11>=1.15.0,<1.16,>=0.0.0a0
+              - libucx-cu11>=1.15.0,<1.16
           - matrix: null
             packages:
-              - libucx>=1.15.0,<1.16,>=0.0.0a0
+              - libucx>=1.15.0,<1.16
   test_python:
     common:
       - output_types: [conda, requirements, pyproject]
