--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -13,28 +13,28 @@ jobs:
   pr-builder:
     needs:
       - checks
-      - conda-python-build
-      - conda-python-tests
+      # - conda-python-build
+      # - conda-python-tests
       - wheel-build
-      - wheel-tests
+      # - wheel-tests
     secrets: inherit
     uses: rapidsai/shared-workflows/.github/workflows/pr-builder.yaml@branch-24.08
   checks:
     secrets: inherit
     uses: rapidsai/shared-workflows/.github/workflows/checks.yaml@branch-24.08
-  conda-python-build:
-    needs: checks
-    secrets: inherit
-    uses: rapidsai/shared-workflows/.github/workflows/conda-python-build.yaml@branch-24.08
-    with:
-      build_type: pull-request
-  conda-python-tests:
-    needs: conda-python-build
-    secrets: inherit
-    uses: rapidsai/shared-workflows/.github/workflows/conda-python-tests.yaml@branch-24.08
-    with:
-      build_type: pull-request
-      container-options: "--cap-add CAP_SYS_PTRACE --shm-size=8g --ulimit=nofile=1000000:1000000"
+  # conda-python-build:
+  #   needs: checks
+  #   secrets: inherit
+  #   uses: rapidsai/shared-workflows/.github/workflows/conda-python-build.yaml@branch-24.08
+  #   with:
+  #     build_type: pull-request
+  # conda-python-tests:
+  #   needs: conda-python-build
+  #   secrets: inherit
+  #   uses: rapidsai/shared-workflows/.github/workflows/conda-python-tests.yaml@branch-24.08
+  #   with:
+  #     build_type: pull-request
+  #     container-options: "--cap-add CAP_SYS_PTRACE --shm-size=8g --ulimit=nofile=1000000:1000000"
   wheel-build:
     needs: checks
     secrets: inherit
@@ -42,11 +42,11 @@ jobs:
     with:
       build_type: pull-request
       script: ci/build_wheel.sh
-  wheel-tests:
-    needs: wheel-build
-    secrets: inherit
-    uses: rapidsai/shared-workflows/.github/workflows/wheels-test.yaml@branch-24.08
-    with:
-      build_type: pull-request
-      script: ci/test_wheel.sh
-      container-options: "--cap-add CAP_SYS_PTRACE --shm-size=8g --ulimit=nofile=1000000:1000000"
+  # wheel-tests:
+  #   needs: wheel-build
+  #   secrets: inherit
+  #   uses: rapidsai/shared-workflows/.github/workflows/wheels-test.yaml@branch-24.08
+  #   with:
+  #     build_type: pull-request
+  #     script: ci/test_wheel.sh
+  #     container-options: "--cap-add CAP_SYS_PTRACE --shm-size=8g --ulimit=nofile=1000000:1000000"
