--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,7 +3,15 @@ ucp/            @rapidsai/ucxpy-python-codeowners
 tests/          @rapidsai/ucxpy-python-codeowners
 examples/       @rapidsai/ucxpy-python-codeowners
 benchmarks/     @rapidsai/ucxpy-python-codeowners
-#build/ops code owners
-.github/           @rapidsai/ops-codeowners 
-ci/                @rapidsai/ops-codeowners
-conda/             @rapidsai/ops-codeowners
+
+#CI code owners
+/.github/                @rapidsai/ci-codeowners
+/ci/                     @rapidsai/ci-codeowners
+/.pre-commit-config.yaml @rapidsai/ci-codeowners
+
+#packaging code owners
+/.devcontainer/    @rapidsai/packaging-codeowners
+/conda/            @rapidsai/packaging-codeowners
+/dependencies.yaml @rapidsai/packaging-codeowners
+/build.sh          @rapidsai/packaging-codeowners
+pyproject.toml     @rapidsai/packaging-codeowners
