--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -16,7 +16,7 @@ jobs:
       # - conda-python-build
       # - conda-python-tests
       - wheel-build
-      # - wheel-tests
+      - wheel-tests
     secrets: inherit
     uses: rapidsai/shared-workflows/.github/workflows/pr-builder.yaml@branch-24.08
   checks:
@@ -42,11 +42,11 @@ jobs:
     with:
       build_type: pull-request
       script: ci/build_wheel.sh
-  # wheel-tests:
-  #   needs: wheel-build
-  #   secrets: inherit
-  #   uses: rapidsai/shared-workflows/.github/workflows/wheels-test.yaml@branch-24.08
-  #   with:
-  #     build_type: pull-request
-  #     script: ci/test_wheel.sh
-  #     container-options: "--cap-add CAP_SYS_PTRACE --shm-size=8g --ulimit=nofile=1000000:1000000"
+  wheel-tests:
+    needs: wheel-build
+    secrets: inherit
+    uses: rapidsai/shared-workflows/.github/workflows/wheels-test.yaml@branch-24.08
+    with:
+      build_type: pull-request
+      script: ci/test_wheel.sh
+      container-options: "--cap-add CAP_SYS_PTRACE --shm-size=8g --ulimit=nofile=1000000:1000000"
