--- a/conda/recipes/ucx-py/meta.yaml
+++ b/conda/recipes/ucx-py/meta.yaml
@@ -34,7 +34,7 @@ requirements:
     - {{ b_r }}
     {% endfor %}
     # 'libucx' wheel dependency is unnecessary... the 'ucx' conda-forge package is used here instead
-    {% for rbb_r in data["tool"]["rapids-build-backend"]["requires"] if not r.startswith("libucx") %}
+    {% for rbb_r in data["tool"]["rapids-build-backend"]["requires"] if not rbb_r.startswith("libucx") %}
     - {{ rbb_r }}
     {% endfor %}
   run:
