--- a/conda/recipes/ucx-py/meta.yaml
+++ b/conda/recipes/ucx-py/meta.yaml
@@ -30,19 +30,19 @@ requirements:
     - python
     - pip
     - ucx
-    {% for b_r in data["build-system"]["requires"] %}
-    - {{ b_r }}
+    {% for build_req in data["build-system"]["requires"] %}
+    - {{ build_req }}
     {% endfor %}
     # 'libucx' wheel dependency is unnecessary... the 'ucx' conda-forge package is used here instead
-    {% for rbb_r in data["tool"]["rapids-build-backend"]["requires"] if not rbb_r.startswith("libucx") %}
-    - {{ rbb_r }}
+    {% for rbb_req in data["tool"]["rapids-build-backend"]["requires"] if not rbb_req.startswith("libucx") %}
+    - {{ rbb_req }}
     {% endfor %}
   run:
     - python
     - ucx >=1.15.0,<1.16.0
     # 'libucx' wheel dependency is unnecessary... the 'ucx' conda-forge package is used here instead
-    {% for r in data["project"]["dependencies"] if not r.startswith("libucx") %}
-    - {{ r }}
+    {% for req in data["project"]["dependencies"] if not req.startswith("libucx") %}
+    - {{ req }}
     {% endfor %}
 
 test:
