--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,8 +4,9 @@ build:
   os: "ubuntu-22.04"
   tools:
     python: "mambaforge-22.9"
-  post_create_environment:
-    - pip install -C rapidsai.disable-cuda=true -C rapidsai.matrix-entry="cuda-12.2" .
+  jobs:
+    post_create_environment:
+      - pip install -C rapidsai.disable-cuda=true -C rapidsai.matrix-entry="cuda-12.2" .
 
 conda:
   environment: conda/environments/builddocs.yml
