--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,7 +10,7 @@ build:
         pip install \
           --extra-index-url "https://pypi.anaconda.org/rapidsai-wheels-nightly/simple/" \
           -C rapidsai.disable-cuda=true \
-          -C rapidsai.matrix-entry="cuda-12.2" \
+          -C rapidsai.matrix-entry="cuda=12.2" \
           .
 
 conda:
