--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -142,17 +142,19 @@ dependencies:
           - --extra-index-url=https://pypi.nvidia.com
           - --extra-index-url=https://pypi.anaconda.org/rapidsai-wheels-nightly/simple
     specific:
+      # very tight >=x.x.x,<x.x.(x+1) here allows for installation of
+      # post release like 1.15.0.post1
       - output_types: [requirements, pyproject]
         matrices:
           - matrix: {cuda: "12.*"}
             packages:
-              - libucx-cu12==1.15.0
+              - libucx-cu12>=1.15.0,<1.15.1
           - matrix: {cuda: "11.*"}
             packages:
-              - libucx-cu11==1.15.0
+              - libucx-cu11>=1.15.0,<1.15.1
           - matrix: null
             packages:
-              - libucx==1.15.0
+              - libucx==1.15.0,<1.15.1
   depends_on_ucx_run:
     common:
       - output_types: conda
